Updated keywordSearch() fetch to use a path parameter opposed to a query param.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <!-- Below is the keyword search of the lessons, within the shopping section. -->
                     <div>
                         <input class="keyword-search" type="text" v-model="searchQuery"
-                            placeholder=" Search For lessons..." v-on:input="debouncedSearch" />
+                            placeholder=" Search For lessons..." v-on:input="debouncedKeywordSearch" />
                     </div>
                     <!-- Below is the filtering and sorting of lessons, within the shopping section. -->
                     <div class="lesson-filters-containment-div">
